# recommender-system

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  __init__.py  config.toml  datastructure.ipynb  datastructure.py  example.ipynb  example.py  frontend.py  indexed_data.pkl  interface.py  lookup_table_impl.ipynb  main.ipynb  main.py  pyproject.toml  recommender.pkl  test.ipynb  test.py  ui.py
.github/workflows/: main.yaml
artifacts/checkpoints/: 20241230-172045_lambda0.1_tau1_gamma0.01_n_epochs4_n_factors10.pkl  20241230-175117_lambda0.1_tau1_gamma0.01_n_epochs4_n_factors10.pkl  20241230-175123_lambda0.1_tau1_gamma0.01_n_epochs4_n_factors10.pkl  20241230-175249_lambda0.1_tau1_gamma0.01_n_epochs4_n_factors10.pkl
artifacts/figures/: rmse_test_train_20250112-220603_lambda0.5_gamma0.01_tau2_epochs20_factors10_input1000000000_lambda0.svg~
artifacts/profiling/: profile_output_20250106_200336.txt  profile_output_20250106_201407.txt  profile_output_20250106_202524.txt  profile_output_20250106_202906.txt
datasets/: README.md
docs/: README.md
examples/movies_lens/: notebook.ipynb  recommender.py  recommender_notebook.ipynb
shape_files/: shape_file.dbf
src/: __init__.py
src/algorithms/: alternating_least_squares.py
src/backends/: __init__.py  alternating_least_squares.py
src/helpers/: _logging.py  checkpoint_manager.py  constants.py  dataset_indexer.py  graphing.py  predictor.py  serial_mapper.py  state_manager.py
src/recommender/: __init__.py
src/recommenders/: __init__.py
src/settings/: __init__.py  logging.py
src/utils/: __init__.py  (+7 more)
(+70 files in other folders)
